[Mac] Ensure security state label doesn't overlap divider

See bug for screenshots

BUG=647014

Review-Url: https://codereview.chromium.org/2710043002
Cr-Commit-Position: refs/heads/master@{#452499}

Former-commit-id: 2f8ae52186762d312b8fbbf44043ced4ef6a333c