chrome/browser/ui/cocoa/location_bar/security_state_bubble_decoration.mm
@@ -30,8 +30,8 @@
 
 namespace {
 
-// Padding between the icon and label.
-CGFloat kIconLabelPadding = 4.0;
+// Padding between the label and icon/divider.
+CGFloat kLabelPadding = 4.0;
 
 // Inset for the background.
 const CGFloat kBackgroundYInset = 4.0;
@@ -164,10 +164,13 @@ void SecurityStateBubbleDecoration::DrawInFrame(NSRect frame,
               fraction:image_alpha
         respectFlipped:YES
                  hints:nil];
-    if (is_rtl)
-      text_right_offset = NSMinX(image_rect) - kIconLabelPadding;
-    else
-      text_left_offset = NSMaxX(image_rect) + kIconLabelPadding;
+    if (is_rtl) {
+      text_left_offset += DividerPadding();
+      text_right_offset = NSMinX(image_rect);
+    } else {
+      text_right_offset -= DividerPadding();
+      text_left_offset = NSMaxX(image_rect);
+    }
   }
 
   // Set the text color and draw the text.
@@ -200,6 +203,7 @@ void SecurityStateBubbleDecoration::DrawInFrame(NSRect frame,
     text_rect.origin.y = std::round(NSMidY(text_rect) - textHeight / 2.0) - 1;
     text_rect.size.width = text_right_offset - text_left_offset;
     text_rect.size.height = textHeight;
+    text_rect = NSInsetRect(text_rect, kLabelPadding, 0);
 
     NSAffineTransform* transform = [NSAffineTransform transform];
     CGFloat progress = GetAnimationProgress();
